--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ add_executable(hi-c
         src/sync/flist.c
         src/sync/diff.c
         src/open/open.c
+        src/util/io64.c
 )
 
 set_target_properties(hi-c PROPERTIES
